diesel_compile_tests/tests/fail/cannot_mix_aggregate_and_non_aggregate_in_order_by.stderr
error[E0277]: mixing aggregate and not aggregate expressions is not allowed in SQL
   --> tests/fail/cannot_mix_aggregate_and_non_aggregate_in_order_by.rs:17:44
    |
 LL |     let _ = users.select(max(id)).order_by(name);
    |                                   -------- ^^^^ unsatisfied trait bound
    |                                   |
    |                                   required by a bound introduced by this call
    |
    = help: the trait `MixedAggregates<diesel::expression::is_aggregate::No>` is not implemented for `diesel::expression::is_aggregate::Yes`
    = note: you tried to combine expressions that aggregate over a certain column with expressions that don't aggregate over that column
    = note: try to either use aggregate functions like `min`/`max`/… for this column or add the column to your `GROUP BY` clause
    = note: also there are clauses like `WHERE` or `RETURNING` that does not accept aggregate expressions at all
help: the following other types implement trait `MixedAggregates<Other>`
   --> DIESEL/diesel/diesel/src/expression/mod.rs
    |
LL |     impl MixedAggregates<Yes> for Yes {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::expression::is_aggregate::Yes` implements `MixedAggregates<diesel::expression::is_aggregate::Yes>`
...
LL |     impl MixedAggregates<Never> for Yes {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::expression::is_aggregate::Yes` implements `MixedAggregates<diesel::expression::is_aggregate::Never>`
    = note: required for `SelectStatement<FromClause<table>, ...>` to implement `OrderDsl<columns::name>`
note: required by a bound in `order_by`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn order_by<Expr>(self, expr: Expr) -> OrderBy<Self, Expr>
    |        -------- required by a bound in this associated function
...
LL |         Self: methods::OrderDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::order_by`

error[E0277]: mixing aggregate and not aggregate expressions is not allowed in SQL
   --> tests/fail/cannot_mix_aggregate_and_non_aggregate_in_order_by.rs:21:39
    |
 LL |     let _ = users.select(id).order_by(max(id));
    |                              -------- ^^^^^^^ unsatisfied trait bound
    |                              |
    |                              required by a bound introduced by this call
    |
    = help: the trait `MixedAggregates<diesel::expression::is_aggregate::Yes>` is not implemented for `diesel::expression::is_aggregate::No`
    = note: you tried to combine expressions that aggregate over a certain column with expressions that don't aggregate over that column
    = note: try to either use aggregate functions like `min`/`max`/… for this column or add the column to your `GROUP BY` clause
    = note: also there are clauses like `WHERE` or `RETURNING` that does not accept aggregate expressions at all
help: the following other types implement trait `MixedAggregates<Other>`
   --> DIESEL/diesel/diesel/src/expression/mod.rs
    |
LL |     impl MixedAggregates<No> for No {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::expression::is_aggregate::No` implements `MixedAggregates<diesel::expression::is_aggregate::No>`
...
LL |     impl MixedAggregates<Never> for No {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::expression::is_aggregate::No` implements `MixedAggregates<diesel::expression::is_aggregate::Never>`
    = note: required for `SelectStatement<FromClause<table>, ...>` to implement `OrderDsl<max<Integer, id>>`
note: required by a bound in `order_by`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn order_by<Expr>(self, expr: Expr) -> OrderBy<Self, Expr>
    |        -------- required by a bound in this associated function
...
LL |         Self: methods::OrderDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::order_by`

error[E0277]: mixing aggregate and not aggregate expressions is not allowed in SQL
   --> tests/fail/cannot_mix_aggregate_and_non_aggregate_in_order_by.rs:28:24
    |
 LL |         .then_order_by(name);
    |          ------------- ^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
    = help: the trait `MixedAggregates<diesel::expression::is_aggregate::No>` is not implemented for `diesel::expression::is_aggregate::Yes`
    = note: you tried to combine expressions that aggregate over a certain column with expressions that don't aggregate over that column
    = note: try to either use aggregate functions like `min`/`max`/… for this column or add the column to your `GROUP BY` clause
    = note: also there are clauses like `WHERE` or `RETURNING` that does not accept aggregate expressions at all
help: the following other types implement trait `MixedAggregates<Other>`
   --> DIESEL/diesel/diesel/src/expression/mod.rs
    |
LL |     impl MixedAggregates<Yes> for Yes {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::expression::is_aggregate::Yes` implements `MixedAggregates<diesel::expression::is_aggregate::Yes>`
...
LL |     impl MixedAggregates<Never> for Yes {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::expression::is_aggregate::Yes` implements `MixedAggregates<diesel::expression::is_aggregate::Never>`
    = note: required for `SelectStatement<..., ..., ..., ..., ...>` to implement `ThenOrderDsl<columns::name>`
note: required by a bound in `diesel::QueryDsl::then_order_by`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn then_order_by<Order>(self, order: Order) -> ThenOrderBy<Self, Order>
    |        ------------- required by a bound in this associated function
LL |     where
LL |         Self: methods::ThenOrderDsl<Order>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::then_order_by`

error[E0277]: mixing aggregate and not aggregate expressions is not allowed in SQL
   --> tests/fail/cannot_mix_aggregate_and_non_aggregate_in_order_by.rs:32:41
    |
 LL |     let _ = users.order_by(name).select(max(id));
    |                                  ------ ^^^^^^^ unsatisfied trait bound
    |                                  |
    |                                  required by a bound introduced by this call
    |
    = help: the trait `MixedAggregates<diesel::expression::is_aggregate::No>` is not implemented for `diesel::expression::is_aggregate::Yes`
    = note: you tried to combine expressions that aggregate over a certain column with expressions that don't aggregate over that column
    = note: try to either use aggregate functions like `min`/`max`/… for this column or add the column to your `GROUP BY` clause
    = note: also there are clauses like `WHERE` or `RETURNING` that does not accept aggregate expressions at all
help: the following other types implement trait `MixedAggregates<Other>`
   --> DIESEL/diesel/diesel/src/expression/mod.rs
    |
LL |     impl MixedAggregates<Yes> for Yes {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::expression::is_aggregate::Yes` implements `MixedAggregates<diesel::expression::is_aggregate::Yes>`
...
LL |     impl MixedAggregates<Never> for Yes {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::expression::is_aggregate::Yes` implements `MixedAggregates<diesel::expression::is_aggregate::Never>`
    = note: required for `SelectStatement<..., ..., ..., ..., ...>` to implement `SelectDsl<max<Integer, id>>`
note: required by a bound in `diesel::QueryDsl::select`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn select<Selection>(self, selection: Selection) -> Select<Self, Selection>
    |        ------ required by a bound in this associated function
...
LL |         Self: methods::SelectDsl<Selection>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::select`

error[E0277]: the trait bound `SelectStatement<..., ..., ..., ..., ...>: SelectDsl<...>` is not satisfied
   --> tests/fail/cannot_mix_aggregate_and_non_aggregate_in_order_by.rs:36:34
    |
 LL |     let _ = users.order_by(name).count();
    |                                  ^^^^^ the trait `SelectDsl<CountStar>` is not implemented for `SelectStatement<..., ..., ..., ..., ...>`
    |
help: the following other types implement trait `SelectDsl<Selection>`
   --> DIESEL/diesel/diesel/src/query_builder/select_statement/dsl_impls.rs
    |
LL | / impl<F, S, D, W, O, LOf, G, H, LC, Selection> SelectDsl<Selection>
LL | |     for SelectStatement<FromClause<F>, S, D, W, O, LOf, G, H, LC>
LL | | where
LL | |     G: ValidGroupByClause,
...   |
LL | |     <Selection as ValidGrouping<G::Expressions>>::IsAggregate:
LL | |         MixedAggregates<<O as ValidGrouping<G::Expressions>>::IsAggregate>,
    | |___________________________________________________________________________^ `SelectStatement<FromClause<F>, S, D, W, O, LOf, G, H, LC>`
...
LL | / impl<S, D, W, O, LOf, G, H, LC, Selection> SelectDsl<Selection>
LL | |     for SelectStatement<NoFromClause, S, D, W, O, LOf, G, H, LC>
LL | | where
LL | |     G: ValidGroupByClause,
LL | |     Selection: SelectableExpression<NoFromClause> + ValidGrouping<G::Expressions>,
LL | |     SelectStatement<NoFromClause, SelectClause<Selection>, D, W, O, LOf, G, H, LC>: Selec...
LL | |     D: ValidDistinctForGroupBy<Selection, G::Expressions>,
    | |__________________________________________________________^ `SelectStatement<NoFromClause, S, D, W, O, LOf, G, H, LC>`

    For more information about this error, try `rustc --explain E0277`.
